syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.fcup.generated";
option java_outer_classname = "PortalRPC";

package main;

// protoc servrpc.proto --go_out=. --java_out=.

service StorageController {
    // Forwards file deletion request from client
    rpc DeleteFile(File) returns (Empty) {}

    // Forwards query from Client
    // If there are multiple files that match the query, return them as a stream
    rpc FileSearch(File) returns (stream FileMetadata) {}
}

message File {
    string filename = 1;
}

message FileMetadata {
    string filename = 1;
    int64 fileSize = 2;
}

// Return Empty if the operation was successful
// Return an error from controller if something went wrong
message Empty {

}
